Minor correction on appartement title style et footer invisible

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -29,7 +29,7 @@ main {
 
 footer {
   padding: 30px;
-  background-color: #440000;
+  margin-top : 30px;
 }
 
 /* MENU */
@@ -220,7 +220,9 @@ footer {
 .appartement-title {
   font-weight: 600;
   font-size: 1.5em;
-  word-wrap: break-word;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .appartement-hr {
